Remove depcreated stuff. Add docs